app/css/main.css
/* ... */
#collection .row > div,
#collection .grid-item,
#discover .row > div,
#discover .grid-item {
    padding: 0;
}

#collection .row > div,
#discover .row > div {
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-right-style: solid;
    border-right-width: 1px;
}

#trakt #history .grid-item {
    padding: 10px;
}

#trakt #history .titles {
    text-align: center;
    padding: 5px 0;
}

#trakt #history .title,
#trakt #history .datetime {
    font-size: 1.2em;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

#trakt #history .datetime {
    font-size: .9em;
}

#trakt #history .spinner {
    margin: 38vh auto;
}

#trakt #history #showMore .showMore_button {
    width: 70%;
    opacity: .5;
    cursor: pointer;
    margin: 50% 15%;
    transition: opacity .4s;
    border-width: 1px;
    border-style: dashed;
}

#trakt #history #showMore .showMore_button:hover {
    opacity: .9;
}

#trakt #history #showMore .fa {
    width: 60%;
    margin: 20% 20% 10% 20%;
    text-align: center;
    font-size: 35px;
}

#trakt #history #showMore .showMore_text {
    text-align: center;
    font-size: 14px;
    margin-bottom: 20%;
}

#collection .shadow,
#discover .shadow {
    height: 75px;
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
    background-repeat: repeat-x;
}

#collection .titles,
#discover .titles {
    position: absolute;
    bottom: 5px;
    left: 12px;
    right: 12px;
    height: auto;
    margin: 0;
}

#collection .titles h4,
#discover .titles h4 {
    font-size: 11px;
    display: inline-block;
    height: auto;
    margin: 0 5px 5px 0;
}

#collection .titles h4 .sxe {
    padding: 3px 5px;
}

#collection .titles h4 .ep-title,
#discover .titles h4 .ep-title {
    padding: 3px 5px;
    padding-left: 6px;
}

#collection .titles h4 .unseen {
    cursor: help;
    font-weight: bold;
    padding: 3px 5px;
}

#collection .titles h3,
#discover .titles h3 {
    margin-top: 3px;
    text-shadow: 0 0 20px black;
    font-size: 18px;
    padding: 10px;
    display: inline-block;
}

#collection .titles h3 .year,
#discover .titles h3 .year {
    font-size: 14px;
    padding-left: 6px;
}

#collection .quick-icons,
#trakt .quick-icons {
    height: 40px;
    overflow: hidden;
    white-space: nowrap;
}

#collection .actions,
#trakt .actions {
    float: left;
}

#collection .actions > div,
#trakt .actions > div {
    height: 40px;
    width: 40px;
    font-size: 2.2em;
    text-align: center;
    vertical-align: middle;
    padding: 5px 0;
    transition: all .5s;
}

#collection .actions > div:hover,
#trakt .actions > div:hover,
#trakt .metadata > div:hover,
#collection .metadata > div:hover {
    cursor: pointer;
}

#collection .actions .trailer,
#discover .actions .trailer {
    font-size: 1.8em;
    padding-top: 7px;
}

#collection .metadata,
#trakt .metadata {
    float: right;
    padding-right: 10px;
}

#collection .metadata .percentage,
#trakt .metadata .percentage {
    font-size: 20px;
    line-height: 40px;
}

#collection .metadata .fa-heart,
#trakt .metadata .fa-heart {
    font-size: 16px;
    margin-right: 5px;
}

#collection .grid-item .data,
#trakt .grid-item .data,
#collection #locals .data {
    display: none;
}

#collection .local-item {
    line-height: 58px; /* because of border-bottom 1px */
}

#locals {
    display: none;
}

#locals .refreshing {
    display: none;
    position: fixed;
    bottom: 0;
    right: 0;
    padding: 5px 10px;
    z-index: 1;
}

#locals .waitforlibrary {
    width: 50%;
    margin: 0 auto;
    font-size: 16px;
    text-align: center;
}

#locals .local-item,
#locals .local-item .season,
#locals .local-item .episode {
    transition: all .3s;
}

#locals .local-item:hover,
#locals .local-item.active {
    cursor: pointer;
}

#locals .local-item .season {
    padding-left: 40px;
}

#locals .local-item .episode {
    margin-left: -40px;
    padding-left: 80px;
}

#locals .local-item .title {
    padding: 20px;
    font-size: 18px;
}

#locals .local-item .title,
#locals .local-item .e-title {
    white-space: nowrap;
}

#locals .local-item .season .title {
    font-size: 16px;
}

#locals .local-item .seasons,
#locals .local-item .episode {
    display: none;
}

#locals .waitforlibrary .notfound {
    display: none;
}

#locals .categories {
    display: flex;
    width: calc(100% - 60px);
    right: 0;
    position: absolute;
}

#locals .category {
    margin: 0 auto;
    justify-content: center;
    display: none;
    text-align: center;
    font-size: 40px;
    height: 200px;
    padding: 30px 60px;
    line-height: 190px;
    margin-top: 150px;
    border-width: 1px;
    border-style: dashed;
    border-radius: 40px;
    transition: all .5s;
    cursor: pointer;
}

#locals .category .text {
    font-size: 18px;
    margin-top: 20px;
}

/* collection END */

/* navbar */

#navbar {
    width: 60px;
    z-index: 2;
    height: 100%;
    position: fixed;
    transition: all .5s;
    overflow: hidden;
    border-right-width: 1px;
    border-right-style: solid;
}

#navbar:hover {
    width: 150px;
}

#navbar .nav {
    width: 100%;
    height: 60px;
    padding: 20px;
    font-size: 20px;
    cursor: pointer;
    transition: all .5s;
}

#navbar .nav .text {
    font-size: 15px;
    top: -16px;
    position: relative;
    left: 40px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#navbar .nav.settings {
    position: absolute;
    bottom: 0;
}

#navbar .nav.bigpicture {
    position: absolute;
    bottom: 60px;
}
#navbar .nav.exitapp {
    position: absolute;
    display: none;
    bottom: 60px;
}

#navbar .separator {
    border-bottom-style: solid;
    border-bottom-width: 1px;
    margin: 20px 0px;
}

/* navbar END */

/* trailer popup */

#trailer {
    width: 100vw;
    position: fixed;
    height: 100%;
    z-index: 998;
    transition: all .5s;
}
/* ... */

